force-app/main/default/objects/custom_create218__c/custom_create218__c.object-meta.xml
<CustomObject>
    <label>Custom created object218</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects218</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>