force-app/main/default/objects/custom_create218__c/fields/custom_create_218field620__c.field-meta.xml
<CustomField>
    <fullName>custom_create_218field620__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 218field620</label>
    <type>Checkbox</type>
</CustomField>